# lattice-trade-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.codex/: instructions.md
.github/: copilot-instructions.md
.github/instructions/: actions.instructions.md  code_review.instructions.md  debug.instructions.md  git_commit.instructions.md  issue_management.instructions.md  pull_request.instructions.md  python-tests.instructions.md  python.instructions.md
apps/dashboard/: README.md
configs/: README.md
data/: README.md
docs/: project_description.typ
docs/dev/: github_labels.json  workstream_map.md
docs/dev/issues/mirrored_from_github/: issue_summary_status.md
docs/reports/: README.md
research/: README.md
scripts/: sync_github_issues.py
scripts/reference_catalog/: README.md  refresh_other_repos_index.py
src/lattice_trade_kit/: __init__.py
src/lattice_trade_kit/adapters/oanda/: __init__.py
src/lattice_trade_kit/execution/: __init__.py
src/lattice_trade_kit/monitoring/: __init__.py
src/lattice_trade_kit/risk/: __init__.py
src/tradecore/: __init__.py
src/tradecore/adapters/: __init__.py
src/tradecore/core/: __init__.py
src/tradecore/market_data/: __init__.py
src/tradecore/ui/: __init__.py
